mystyle.css
/*Shared formatting*/
@font-face {  font-family: Quando; src: url(fonts/Quando-Regular.ttf); format("truetype"); }
@font-face {  font-family: SourceSansPro; src: url(fonts/SourceSansPro-Regular.ttf); format("truetype"); }
@font-face {  font-family: SourceSansPro-Light; src: url(fonts/SourceSansPro-Light.ttf); format("truetype"); }
@font-face {  font-family: Montserrat; src: url(fonts/Montserrat-Regular.otf); format("truetype"); }


/*Desktop Formatting*/
@media (min-width: 610px) {
	body {
	  background-color:#000000;
	  font-family: SourceSansPro;
	  font-size: 20px;
	  min-width: 1110px;
	  margin: 8px min(0px,((100% - 1110px) / 2)) 8px min(0px,((100% - 1110px) / 2));
	  color:#EEEEEE;
	}
	h1 {
	  color:#EEEEEE;
	  margin-left: 15px;
	  margin-bottom: -8px;
	  font-family: Quando;
	  font-size: 1.8em;
	}
	h2 {
		color:#EEEEEE;
		font-family: Quando;
		font-size: 1.5em;
	}
	h3 {
		color:#EEEEEE;
		font-family: Montserrat;
		font-size: 1.4em;
	}
	h4 {
		color:#EEEEEE;
		font-family: SourceSansPro-Light;
		font-size: 1.2em;
		margin-top: 0em;
		margin-bottom: 0em;
	}
	h6 {
		font-family: SourceSansPro;
		font-size: .65em;
		font-weight: normal;
		margin: -10px 0px 0px 0px;
	}
	p {
		color:#EEEEEE;
	}
	ul {
		margin: -10px 0px 20px -20px;
	}
	.remove-top-margin-text {
		margin: 0em 0em 1em 0em;
	}
	.content {
		max-width: 1600px;
		margin: auto;
		min-width:1120px;
		width: auto !important;/* Firefox will set width as auto */
		width:1110px;          /* As IE6 ignores !important it will set width as 1100px; */
	}
	.undecorated-links {
		text-decoration:none;
	}
	.decorated-links {
		color: #EEEEEE;
		text-decoration:underline solid #EEEEEE 1px;
	}
	.header-hero {
		top: 0;
		background-color: #000000;
		display: flex;
		margin: -0.5em auto 0em 3em;
		align-items: center;
	}
	.header-hero-text-and-div {
		width: 100%;
	}
	#container-header-text {
		display: normal;
		align-items: flex-start;
		color: #FFFFFF;
	}
	#container-header-hr {
		color: #D9D9D9;
		margin-right: 10em;
	}
	#img-home {
		margin-left: 3.25em;
		margin-top: .5em;
		width: 5.70em;
		padding: .4em;
		top: 0;
		z-index: 10;
	}
	#img-twitter-header {
		height: 1.02em;
		margin: 0em 0.05em;
	}
	#img-twitter-footer {
		width: 1.65em;
		padding: .1em .1em 0em .1em;
		margin: 0em .1em;
	}
	#img-linkedin-header {
		height: 1.1em;
		margin: 0em 0em 0em 0.15em;
	}
	#img-linkedin-footer {
		width: 1.5em;
		padding: .1em .1em 0em .1em;
		margin: 0em .1em;
	}
	#img-bandcamp-header {
		width: 2.35em;
		margin: 0em 0.05em 0em 0.1em;
		padding: 0em 0em 0em 0em;
	}
	#img-bandcamp-footer {
		width: 3em;
		margin: 0em 0em 0em 0.1em;
		padding: 0em 0em 0em 0em;
	}
	#img-tumblr-header {
		height: 1.11em;
		margin: 0em 0.05em;
	}
	#img-tumblr-footer {
		width: 0.90em;
		padding: .1em .1em 0em .1em;
		margin: 0em .1em;
	}
	#img-quicklink-prev {
		width: 10em;
		margin: .1em .1em .1em .1em;
		border: 2px solid #4B4B4B;
	}
	#img-bio {
		width: 16em;
		margin: 1em .1em 1em .1em;
		border: 4px solid #4B4B4B;
		display: flex;
		align-items: center;
		justify-content: right;
	}
	.header-sidekick {
		position: sticky;
		top: 0;
		z-index: 1;
		background-color: #000000;
	}
	.header-sidekick-background {
		position: sticky;
		z-index: 0;
		color: #000000;
		height: 28px;
		margin: -1.25em 0em 3em 12.75em;
	}
	.header-sidekick-buttons{
	}
	.header-button {
		border: none;
		background-color: #000000;
		color: #EEEEEE;
		padding: 0px 0px;
		font-size: 22px;
		float: left;
		transition-duration: 0.2s;
		font-family: SourceSansPro;
		width: 120px;
	}
	.header-button:hover {
		background-color: #7F7F7F;
		cursor: pointer;
	}
	.header-button-disabled {
		border: none;
		color: white;
		background-color: #3D3D3D;
		padding: 0px 0px;
		font-size: 22px;
		float: left;
		font-family: SourceSansPro;
		width: 120px;
	}
	.header-sidekick-links {
		margin-right: 10em;
		float: right;
	}
	.main_hr {
		margin: 0px 125px;
		color:#CFCFCF;
		height: 1.3px;
		background-color: #CFCFCF;
	}
	.minor_hr {
		margin: 0px 125px;
		color:#888888;
	}
	.content-quicklinks-group-div {
		margin: 20px 125px 20px 125px;
	}
	.content-quicklinks-group-title {
		margin: 25px 0px 25px 10px;
	}
	.content-quick-link-div {
		margin: 0px -15px 0px -15px;
		display: flex;
		flex-wrap: wrap;
		align-items: center;
		justify-content: center;
	}
	.content-quick-link-separator {
		margin-left: .4em;
		margin-right: .4em;
		padding: .2em;
	}
	.content-quick-link-box {
		overflow: clip;
		text-align: center;
		border: .1em solid #CCCCCC;
		background-color: #444444;
		padding: .3em;
	}
	.content-bio-div {
		margin: 2em 7em 1em 7em;
		display: flex;
	}
	.content-bio-text {
		width:67.5%;
		margin-right:20px;
	}
	.content-bio-img {
	}
	.content-bio-favgames-div {
		margin: 2em 6em 1em 7em;
		display: flex;
		justify-items: center;
	}
	.content-bio-favgames-column-1 {
		margin: 0px 6vw 0px 0px;
		width: max(480px, 33%)
	}
	.content-bio-favgames-column-2 {
		margin: 0px 8vw 0px 0px;
		width: max(320px, 50%)
	}
	.content-bio-favgames-column-3 {
		margin: 0px 15px 0px 0px;
		width: max(570px, 46%)
	}
	#container-video-reel {
		padding: 0px;
		text-align: center;
		display: block;
		margin-left: auto;
		margin-right: auto;
		margin-top: -15px;
		width: 60%;
	}
	#container-disclaimer-text {
		text-align:center;
		display: block;
		color:#EEEEEE;
		margin-top: 0px;
		margin-bottom: 0px;
	}
	.footer-main {
		text-align: center;
	}
	.footer-links {
		float: none;
	}
	.project-div {
		margin: 1em 7em 2em 7em;
		column-count: 2;
		column-gap: 2em;
	}
	.project-div-singlecolumn {
		margin: 1em 7em 2em 7em;
	}
	.project-follow-div {
		margin: -10px 7em 2em 7em;
		column-count: 2;
		column-gap: 2em;
	}
	.project-title {
		margin: 1em 7em 1em 4.6em;
	}
	.subproject-title {
		margin: 0em 0em 1em 0em;
	}
	.project-content-left {
	}
	.project-content-right {
	}
	.project-video-embed {
		--div-width: max(408px,min(38.5vw, 450px));
		width: var(--div-width);
		height: calc(var(--div-width) * 9 / 16);
	}
	.project-slideshow-embed {
		--div-width: max(375px,min(45vw, 500px));
		width: var(--div-width);
		height: calc(var(--div-width) * 10 / 16);
		margin: 0px 0px 20px 0px;
		
	}
	.project-bandcamp-embed {
		border: 0;
		width: 100%;
		height: 120px;
	}
	#roboxing-bandcamp {
		margin-top: 2.3em;
	}
	#img-arte-lumiere {
		width: 90%;
		margin-top: 0.5em;
	}
	.download-button {
		border: 1px solid #4B4B4B;
		background-color: #222222;
		color: #EEEEEE;
		padding: 4px 10px;
		font-size: 22px;
		float: left;
		transition-duration: 0.2s;
		font-family: SourceSansPro;
		display: flex;
		align-items: center;
		margin-right: 1em;
	}
	.download-button:hover {
		background-color: #7F7F7F;
	}
	.img-reascript-gif {
		width: min(100%, 450px);
	}
	#img-reaper-logo {
		margin: -40px 0px 0px 0px;
	}
}

/****************************/
/****************************/

/*Mobile formatting*/
@media (max-width: 610px) {
	body {
	  background-color:#000000;
	  font-family: SourceSansPro;
	  font-size: 16px;
	  color:#EEEEEE;
	}
	h1 {
	  color:#EEEEEE;
	  margin-left: 12px;
	  margin-bottom: -6px;
	  font-family: Quando;
	  font-size: 1.9em;
	}
	h2 {
		color:#EEEEEE;
		font-family: Quando;
		font-size: 1.5em;
	}
	h3 {
		color:#EEEEEE;
		font-family: Montserrat;
		font-size: 1.4em;
	}
	h4 {
		color:#EEEEEE;
		font-family: SourceSansPro-Light;
		font-size: 1.2em;
		margin-top: 0em;
		margin-bottom: 0em;
	}
	h6 {
		font-family: SourceSansPro;
		font-size: .65em;
		font-weight: normal;
		margin: -8px 0px 12px 0px;
	}
	ul {
		margin: 3px 0px 15px -20px;
	}
	p {
		color:#EEEEEE;
	}
	.content {
		margin: auto;
		width: auto !important;/* Firefox will set width as auto */
	}
	.undecorated-links {
		text-decoration:none;
	}
	.decorated-links {
		color: #EEEEEE;
		text-decoration:underline solid #EEEEEE 1px;
	}
	.header-hero {
		top: 0;
		background-color: #000000;
		display: flex;
		margin: 0em auto 0em 0em;
		align-items: center;
	}
	.header-hero-text-and-div {
		width: 100%;
	}
	#container-header-text {
		display: normal;
		align-items: flex-start;
		color: #FFFFFF;
	}
	#container-header-hr {
		color: #D9D9D9;
		margin-right: .5em;
	}
	#img-home {
		margin-left: 0em;
		margin-top: .5em;
		width: 4em;
		padding: .4em;
	}
	#img-twitter-footer {
		width: 1.65em;
		padding: .1em .1em 0em .1em;
		margin: 0em .1em;
	}
	#img-linkedin-footer {
		width: 1.5em;
		padding: .1em .1em 0em .1em;
		margin: 0em .1em;
	}
	#img-bandcamp-footer {
		width: 3em;
		margin: 0em 0em 0em 0.1em;
		padding: 0em 0em 0em 0em;
	}
	#img-tumblr-footer {
		width: 0.95em;
		padding: .1em .1em 0em .1em;
		margin: 0em .1em;
	}
	#img-quicklink-prev {
		width: 8em;
		margin: .1em .1em .1em .1em;
		border: 2px solid #4B4B4B;
	}
	#img-bio {
		width: 15em;
		margin: 1em .1em 1em .1em;
		border: 4px solid #4B4B4B;
		align-items: center;
		justify-content: center;
	}
	.header-sidekick {
		position: sticky;
		top: 0;
		z-index: 1;
		margin: -0.46em 0em 0em 0em;
		background-color: #000000;
	}
	.header-sidekick-background {
		position: sticky;
		z-index: 0;
		color: #000000;
		height: 28px;
	}
	.header-sidekick-buttons{
		margin-right: 0em 0em 0em 0em;
		float: right;
	}
	.header-button {
		border: none;
		background-color: #000000;
		color: #EEEEEE;
		padding: 0px 6px;
		font-size: 22px;
		float: left;
		transition-duration: 0.2s;
		font-family: SourceSansPro;
	}
	.header-button:hover {
		background-color: #7F7F7F;
	}
	.header-button-disabled {
		border: none;
		color: white;
		background-color: #3D3D3D;
		padding: 0px 6px;
		font-size: 22px;
		float: left;
		font-family: SourceSansPro;
	}
	.header-sidekick-links {
		display: none;
	}
	.main_hr {
		margin: 0px, 50px, 0px, 50px;
	}
	.minor_hr {
		margin: 0px, 50px, 0px, 50px;
	}
	.content-quicklinks-group-div {
		margin: 0em 1em 0em 1em;
	}
	.content-quick-link-div {
		margin: -0.75em 0em 0em 0em;
		display: flex;
		flex-wrap: wrap;
		justify-content: center;
		align-items: center;
	}
	.content-quick-link-separator {
		margin: .5em;
	}
	.content-quick-link-box {
		overflow: clip;
		text-align: center;
		padding: .2em;
		border: .1em solid #CCCCCC;
		background-color: #444444;
	}
	.content-bio-div {
		margin: 1em 1em 1em 1em;
	}
	.content-bio-text {
	}
	.content-bio-img {
	}
	.content-bio-favgames-div {
		margin: 1em 1em 1em 1em;
	}
	#container-video-reel {
		padding: 0px;
		text-align: center;
		display: block;
		margin-left: auto;
		margin-right: auto;
		margin-top: 0px;
		width: 95%;
	}
	#container-disclaimer-text {
		text-align:center;
		display: block;
		color:#EEEEEE;
		margin-top: 0px;
		margin-bottom: 0px;
	}
	.footer-main {
		text-align: center;
	}
	.footer-links {
		float: none;
	}
	.project-div {
		margin: 1em 1em 2em 1em;
	}
	.project-title {
		margin: 16px 16px 16px 16px;
	}
	.project-content-left {
		width: 100%;
	}
	.project-content-right {
		width: 100%;
	}
	.project-video-embed {
		width: 100%;
		height: 200px;
		margin: 1.0em 0em 0.5em 0em;
	}
	.project-slideshow-embed {
		width: 100%;
		height: 200px;
		margin: 1.0em 0em 0.5em 0em;
	}
	.project-bandcamp-embed {
		border: 0;
		width: 100%;
		height: 120px;
		margin: 0em 0em 0em 0em
	}
	#roboxing-bandcamp {
		margin-top: 0.5em;
	}
	#img-arte-lumiere {
		width: 100%;
	}
	.download-button {
		border: 1px solid #4B4B4B;
		background-color: #333333;
		color: #EEEEEE;
		padding: 1px 7px;
		font-size: 22px;
		transition-duration: 0.2s;
		font-family: SourceSansPro;
		align-items: center;
	}
	.download-button:hover {
		background-color: #7F7F7F;
	}
	.img-reascript-gif {
		width: 100%;
		margin-top: 0.4em;
	}

